# aura-protocol

./: .gitignore  AUDIT_REPORT_2026-04-29.md  AUDIT_TASK_2026-04-29.md  AURA_Litepaper.md  Anchor.toml  CONTRACT_SPEC_2026-04-29.md  Cargo.toml  INSTALLATION_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  package-lock.json  package.json  setup-and-run.sh
aura-afterdark/: SPEC.md  index.html  package-lock.json  package.json
aura-afterdark/src/: App.tsx  index.css
aura-afterdark/src/components/: BottomNav.tsx  CreatorCard.tsx  CurationStakeModal.tsx  FeeBreakdown.tsx  IrisChat.tsx  NotificationBell.tsx  PostCard.tsx  SearchBar.tsx  SearchFilter.tsx  ShareModal.tsx  Sidebar.tsx  TipModal.tsx  Toast.tsx  WalletInfo.tsx
aura-afterdark/src/data/: mock.ts  mockDashboard.ts  mockLive.ts  mockNotifications.ts
aura-afterdark/src/pages/: AgeGate.tsx  CommitteeDetail.tsx  ContentDetail.tsx  CreateCreatorCoin.tsx  CreatePage.tsx  CreateProposal.tsx  CreatorCoin.tsx  CreatorCoinDetail.tsx  CreatorDashboard.tsx  CreatorPage.tsx  CurationPage.tsx  DiscoverPage.tsx  EmailAuth.tsx  Following.tsx  GovernancePage.tsx  HomePage.tsx  Incentives.tsx  LiveLandingPage.tsx  LivePage.tsx  LiveStreamPage.tsx  LiveViewPage.tsx  MakeOffer.tsx  MarketplacePage.tsx  MessagesPage.tsx  NotificationsPage.tsx  OfferSuccess.tsx  PaidContentConfirm.tsx  ProfilePage.tsx  ProposalDetail.tsx  Rankings.tsx  ReportPage.tsx  Rewards.tsx  SearchResultsPage.tsx  SettingsPage.tsx  StakingPage.tsx  WalletPage.tsx
aura-afterdark/src/types/: dashboard.ts  live.ts  notifications.ts
aura-mainstream/: .env.example  DEPLOY_SECURITY_FIXES.md  SPEC.md  SUMMARY.md  deploy-security.sh  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
aura-mainstream/api/: faucet.ts
aura-mainstream/public/: manifest.json
aura-mainstream/scripts/: dev-mint-plugin.mjs  init-staking-pool.mjs  mint-test-ora-to.mjs  smoke-fractionalize.mjs  smoke-redemption.mjs  smoke-test-staking.mjs
aura-mainstream/src/: App.tsx  index.css  main.tsx  polyfills.ts  sw.ts
aura-mainstream/src/components/: ClaimTestOraButton.tsx  ErrorBoundary.tsx  FeedbackWidget.tsx  HelpButton.tsx  SupabaseFollowSync.tsx  UserAvatar.tsx
aura-mainstream/src/context/: AuthContext.tsx  BuyOraContext.tsx  DevToolsContext.tsx  I18nContext.tsx  MockChainContext.tsx  SideNavContext.tsx  ThemeContext.tsx  ToastContext.tsx
aura-mainstream/src/data/: mock.ts  mockP1.ts  nfts.ts
aura-mainstream/src/hooks/: useAggregatedUserPosts.ts  useAutoFundLocalnet.ts  useBountyContract.ts  useChainTxHistory.ts  useContentKeysContract.ts  useCoreContract.ts  useCreatorCoinContract.ts  useCreatorCoinRedemption.ts  useCurationContract.ts  useDmUnread.ts  useExploreLeaderboards.ts  useFractionalizeContract.ts  useGoBack.ts  useIsSelf.ts  useMarketContract.ts  useMarketRoyaltyContract.ts  useMediaUrl.ts  useOraBalance.ts  useOraContract.ts  useOraGuard.ts  usePrivyAutoCreateWallet.ts  useStakingContract.ts  useUnifiedWallet.ts  useUserPosts.ts
aura-mainstream/src/i18n/: en.ts
aura-mainstream/src/lib/: curation-score.ts  dm.ts  feedback.ts  follows.ts  iris-chat.ts  mediaStore.ts  onChainPostStore.ts  supabase.ts  wallet-auth.ts
aura-mainstream/src/pages/: AdDetailPage.tsx  AuthPage.tsx  BountyCreatePage.tsx  BountyDetailPage.tsx  BuyOraPage.tsx  CoinDetailPage.tsx  CoinStudioPage.tsx  CreatePage.tsx  CurationPage.tsx  DashboardPage.tsx  ExploreLeaderboardPage.tsx  ExplorePage.tsx  FractionDetailPage.tsx  GovernancePage.tsx  HomePage.tsx  LivePage.tsx  LiveStreamPage.tsx  MarketplacePage.tsx  MessagesPage.tsx  NftDetailPage.tsx  NotificationsPage.tsx  OnboardingPage.tsx  PostDetailPage.tsx  PremiumContentPage.tsx  ProfilePage.tsx  ProposalDetailPage.tsx  ProtocolPage.tsx  RemixDetailPage.tsx  RemixPage.tsx  SettingsPage.tsx  (+3 more)
demo-video/: AURA_Pitch_Card_Content.md  AURA_Pitch_Recording_Script_For_Soren.md  AURA_Pitch_Script_Final_2min.md  AURA_Pitch_Video_Plan_v1.md  AURA_Pitch_Video_Plan_v2_2min.md
demo-video/aura-demo/: package-lock.json  package.json  tsconfig.json
docs/: AURA_Numbers_Handbook.md  AURA_Web3升级方案_v1.md
programs/content-keys/: Cargo.toml
programs/content-keys/src/: lib.rs
programs/content-license/: Cargo.toml
programs/content-license/src/: lib.rs
programs/core/: Cargo.toml
programs/creator-coin/: Cargo.toml
programs/creator-coin/src/: benefits.rs  gift.rs  lib.rs  redemption.rs
programs/curation/: Cargo.toml
programs/fractionalize/: Cargo.toml
programs/fractionalize/src/: lib.rs
programs/governance/: Cargo.toml
programs/launch-incentives/: Cargo.toml
programs/launch-incentives/src/: lib.rs
programs/livestream/: Cargo.toml
programs/market/: Cargo.toml
programs/market/src/: bounty_v2.rs  bounty_v2_ix.rs  buy_order.rs  lib.rs  royalty.rs  sell_order.rs
programs/ora/: Cargo.toml
programs/ora/src/: lib.rs
programs/reputation/: Cargo.toml
programs/reputation/src/: lib.rs
programs/rewards/: Cargo.toml
programs/rewards/src/: lib.rs
programs/social-graph/: Cargo.toml
programs/social-graph/src/: lib.rs
programs/staking/: Cargo.toml
programs/type-b/: Cargo.toml
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
scripts/: deploy-localnet.sh  dev-seed-creator-coin.mjs  smoke-fractionalize.mjs  smoke-redemption.mjs  start.sh
sdk/: .gitignore  .npmignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  tsconfig.json
sdk/examples/: usage.ts
sdk/src/: client.ts  constants.ts  index.ts  types.ts
tests/: aura-creator-coin.ts  aura-governance.ts  aura-market.ts  aura-sdk-contentKeys.ts  aura-sdk-contentLicense.ts  aura-sdk-core.ts  aura-sdk-creatorCoin.ts  aura-sdk-curation.ts  aura-sdk-fractionalize.ts  aura-sdk-governance.ts  aura-sdk-launchIncentives.ts  aura-sdk-livestream.ts  aura-sdk-market.ts  aura-sdk-ora.ts  aura-sdk-reputation.ts  aura-sdk-rewards.ts  aura-sdk-socialGraph.ts  aura-sdk-staking.ts  aura-sdk-vault.ts
vite-app/: .npmrc  index.html  package.json  tailwind.config.js  vite.config.ts
vite-app/src/: App.tsx  AppV2Routes.tsx  index.css  vite-env.d.ts
(+218 files in other folders)
