[workspace]
members = [
    "programs/core",
    "programs/vault",
    "programs/governance",
    "programs/market",
    "programs/curation",
    "programs/creator-coin",
    "programs/social-graph",
    "programs/content-license",
    "programs/reputation",
    "programs/fractionalize"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
