[package]
name = "aura-content-license"
version = "0.1.0"
description = "AURA Content License Program - Content composability and licensing protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_content_license"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# [audit fix round2 R2-CL-H1] `init-if-needed` is required so `pay_to_embed`
# / `pay_to_remix` can lazy-init the payer's `PaymentCounter` on first use.
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
