[package]
name = "aura-creator-coin"
version = "0.1.0"
description = "AURA Creator Coin Program - Creator token bonding curve system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_creator_coin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
