[package]
name = "aura-creator-coin"
version = "0.1.0"
description = "AURA Creator Coin Program - Creator token bonding curve system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_creator_coin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["associated_token"] }
