[package]
name = "aura-fractionalize"
version = "0.1.0"
description = "AURA Fractionalize Program - NFT Fractionalization and Fragment Trading"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_fractionalize"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
