[package]
name = "aura-launch-incentives"
version = "0.1.0"
description = "AURA Launch Incentives - Million Plan / Creator Onboarding / Rising Star sub-programs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_launch_incentives"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
