[package]
name = "aura-launch-incentives"
version = "0.1.0"
description = "AURA Launch Incentives - Million Plan / Creator Onboarding / Rising Star sub-programs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_launch_incentives"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
# [stack-fix 2026-05-19] disable default features to drop spl-token-2022 (this program
# doesn't use token-2022; the default pulls confidential_transfer code that overflows
# Solana's 4096-byte stack frame in verify_transfer_with_fee_proof).
anchor-spl = { version = "0.29.0", default-features = false, features = ["token", "associated_token"] }
