[package]
name = "aura-market"
version = "0.1.0"
description = "AURA Market Program - NFT marketplace and trading"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
