[package]
name = "aura-ora"
version = "0.1.0"
description = "AURA ORA Token - Native utility token with burn mechanics"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_ora"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
