[package]
name = "aura-ora"
version = "0.1.0"
description = "AURA ORA Token - Native utility token with burn mechanics"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_ora"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
# [audit fix C4.M-1 option-C] CPI into rewards for all ORA mint paths
rewards = { path = "../rewards", package = "aura-rewards", features = ["cpi"] }
