[package]
name = "aura-reputation"
version = "0.1.0"
description = "AURA Reputation Program - Soulbound Token (SBT) for creator reputation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_reputation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
