[package]
name = "aura-rewards"
version = "0.1.0"
description = "AURA Rewards Program - Model C dual-decay incentive distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
