[package]
name = "aura-vault"
version = "0.1.0"
description = "AURA Vault Program - 7-day vesting and treasury management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aura_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
